--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/julie-ify/Calculator-App/issues"
   },
-  "homepage": "https://github.com/julie-ify/Calculator-App#readme"
+  "homepage": "https://github.com/julie-ify/Calculator-App"
 }
